* Fix mocking issue with the ByteBuddy MockMaker when using multiple classloaders in Java 21 spockIssue:2017[]
* Fix mocking of final classes via `@SpringBean` and `@SpringSpy` spockIssue:1960[]
* Size of data providers is no longer calculated multiple times but only once

== 2.4-M4 (2024-03-21)

* Fix nested regex finding in conditions spockPull:1931[]
** Fixes spockIssue:1930[] a regression introduced in M2 by spockPull:1921[]

== 2.4-M3 (2024-03-21)

=== Breaking Changes

* _Most users will probably be unaffected by this change as it only becomes relevant in a multithreaded situation where multiple threads do interaction invocations that care about shared state._ +
  Calculated responses for interactions (`>> { ... }`) previously were all executed synchronized on the respective mock controller instance, so could safely mutate shared state to a certain degree, even if the invocations were happening
  on different threads.
  This also caused that one response calculation could not wait on something happening in another response calculation, as they were all executed sequentially due to the synchronization.
  Starting with this release, the response calculations are no longer happening synchronized.
  If you depend on shared state in such calculations, you now have to make sure yourself, that this is done in a thread-safe manner.
  spockPull:1910[]

* _This should not affect most users, only if you were subclassing `SingleResponseGenerator` and doing unusual things._ +
  `SingleResponseGenerator#isAtEndOfCycle` is now `final` and `SingleResponseGenerator#doRespond` is now `protected`.
  When subclassing `SingleResponseGenerator` it does not make sense to override the first method, and it does not make sense to call the second method from somewhere else.
  spockPull:1910[]

=== Misc

* Add option to create Groovy spies with existing instances spockPull:1825[]